
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int uint8_t ;
typedef int uint64_t ;
typedef TYPE_1__* thread_t ;
typedef scalar_t__ ledger_t ;
struct TYPE_5__ {int cpu_time; } ;
struct TYPE_4__ {scalar_t__ t_threadledger; int options; } ;


 int KERN_INVALID_ARGUMENT ;
 int KERN_RESOURCE_SHORTAGE ;
 int LEDGER_ACTION_BLOCK ;
 int LEDGER_ACTION_IGNORE ;
 int LEDGER_CREATE_INACTIVE_ENTRIES ;
 int LEDGER_LIMIT_INFINITY ;
 scalar_t__ LEDGER_NULL ;
 int MINIMUM_CPULIMIT_INTERVAL_MS ;
 int NSEC_PER_MSEC ;
 int THREAD_CPULIMIT_DISABLE ;
 int THREAD_CPULIMIT_EXCEPTION ;
 int TH_OPT_PROC_CPULIMIT ;
 int TH_OPT_PRVT_CPULIMIT ;
 int assert (int) ;
 int cpumon_ustackshots_trigger_pct ;
 TYPE_1__* current_thread () ;
 int ledger_disable_callback (scalar_t__,int ) ;
 int ledger_entry_setactive (scalar_t__,int ) ;
 scalar_t__ ledger_instantiate (int ,int ) ;
 int ledger_set_action (scalar_t__,int ,int ) ;
 int ledger_set_limit (scalar_t__,int ,int,int ) ;
 int ledger_set_period (scalar_t__,int ,int) ;
 int nanoseconds_to_absolutetime (int,int*) ;
 int panic (char*) ;
 int thread_ledger_template ;
 TYPE_2__ thread_ledgers ;

int
thread_set_cpulimit(int action, uint8_t percentage, uint64_t interval_ns)
{
 thread_t thread = current_thread();
 ledger_t l;
 uint64_t limittime = 0;
 uint64_t abstime = 0;

 assert(percentage <= 100);

 if (action == THREAD_CPULIMIT_DISABLE) {



  if (thread->t_threadledger != LEDGER_NULL) {
   l = thread->t_threadledger;
   ledger_set_limit(l, thread_ledgers.cpu_time, LEDGER_LIMIT_INFINITY, 0);
   ledger_set_action(l, thread_ledgers.cpu_time, LEDGER_ACTION_IGNORE);
   thread->options &= ~(TH_OPT_PROC_CPULIMIT | TH_OPT_PRVT_CPULIMIT);
  }

  return (0);
 }

 if (interval_ns < MINIMUM_CPULIMIT_INTERVAL_MS * NSEC_PER_MSEC) {
  return (KERN_INVALID_ARGUMENT);
 }

  l = thread->t_threadledger;
 if (l == LEDGER_NULL) {



  if ((l = ledger_instantiate(thread_ledger_template, LEDGER_CREATE_INACTIVE_ENTRIES)) == LEDGER_NULL)
   return (KERN_RESOURCE_SHORTAGE);




  ledger_entry_setactive(l, thread_ledgers.cpu_time);
  thread->t_threadledger = l;
 }





 limittime = (interval_ns * percentage) / 100;
 nanoseconds_to_absolutetime(limittime, &abstime);
 ledger_set_limit(l, thread_ledgers.cpu_time, abstime, cpumon_ustackshots_trigger_pct);



 ledger_set_period(l, thread_ledgers.cpu_time, interval_ns);

 if (action == THREAD_CPULIMIT_EXCEPTION) {




  if (thread->options & TH_OPT_PRVT_CPULIMIT) {
   panic("CPU usage monitor activated, but blocking thread limit exists");
  }







  thread->options |= TH_OPT_PROC_CPULIMIT;
 } else {




  thread->options &= ~TH_OPT_PROC_CPULIMIT;

  thread->options |= TH_OPT_PRVT_CPULIMIT;

  ledger_disable_callback(l, thread_ledgers.cpu_time);
  ledger_set_action(l, thread_ledgers.cpu_time, LEDGER_ACTION_BLOCK);
 }

 return (0);
}
